--- a/src/app/landing-page/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page/landing-page.component.css
@@ -172,8 +172,7 @@ h2 {
 
     .feature {
         flex-direction: column;
-        justify-content: center;
-        align-items: stretch;
+        align-items: center;
         color: #011638;
     }
 
@@ -186,7 +185,8 @@ h2 {
         margin: 1em 2ch 1em 2ch;
         border-radius: 2em;
         box-shadow: 0 0 1rem #000000dd;
-        object-fit: cover;
+        max-width: 80%;
+        height: auto;
     }
 
     .statement {
